sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/Location_to_Note_IEN_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to host the Mapping for Location and Note Title IENs</description>
    <label>Location to Note IEN Mapping</label>
</CustomObject>