sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/fields/Progress_Note_Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Title_Name__c</fullName>
    <description>Title of Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Progress Note Title Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>