sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>