sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>