sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Progress_Note_Title_Name__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Note_Tittle_IEN__c</columns>
    <columns>VistA_Environment__c</columns>
    <columns>VISN__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>