sfdx-source/main/default/objects/Location_to_Note_IEN_Mapping__c/listViews/CHYSHR.listView-meta.xml
<ListView>
    <fullName>CHYSHR</fullName>
    <columns>NAME</columns>
    <columns>Note_Tittle_IEN__c</columns>
    <columns>Progress_Note_Title_Name__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Site_Name__c</columns>
    <columns>VISN__c</columns>
    <columns>VistA_Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site_ID__c</field>
        <operation>equals</operation>
        <value>983</value>
    </filters>
    <label>CHYSHR</label>
</ListView>